<resources>
    <string name="app_name">WeatherForecast</string>
    <string name="temp_celsius">%1$s °C</string>
    <string name="temp_fahrenheit">%1$s °F</string>
    <string name="retry">Retry</string>
    <string name="filter">Filter</string>
    <string name="search_here">Search Here...</string>
    <string name="select_filter">Select Filter</string>
    <string name="city_name">City Name</string>
    <string name="zip_code">Zip Code</string>
    <string name="lat_long">Latitude/Longitude</string>
    <string name="current_location">Current Location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forecast">Forecast</string>
    <string name="current_weather">Current Weather</string>
    <string name="go">Go</string>
    <string name="you_can_choose_from_saved_locations">You can choose from saved locations:</string>
    <string name="select_filter_first">Please select a filter and write a location first</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
</resources>