<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginTop="10dp"
    android:background="@drawable/search_background"
    app:layout_constraintTop_toTopOf="parent">

    <Spinner
        android:id="@+id/filterSpinner"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@id/searchEt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/searchEt" />

    <EditText
        android:id="@+id/searchEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/search_here"
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintEnd_toStartOf="@id/goTv"
        app:layout_constraintStart_toEndOf="@id/filterSpinner"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/searchLatEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/latitude"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@id/searchLongEt"
        app:layout_constraintStart_toEndOf="@id/filterSpinner"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/searchLongEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/longitude"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@id/goTv"
        app:layout_constraintStart_toEndOf="@id/searchLatEt"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/goTv"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:background="@drawable/item_background"
        android:elevation="10dp"
        android:gravity="center"
        android:text="@string/go"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/searchEt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/searchEt"
        app:layout_constraintTop_toTopOf="@id/searchEt" />

</androidx.constraintlayout.widget.ConstraintLayout>